--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "incremental": true,
     "skipLibCheck": true
   },
-  "exclude": ["node_modules", "dist", "public"]
+  "exclude": ["node_modules"]
 }
